src/App.css
@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&display=swap");

:root {
  /** -- COLORS --*/
  --color1: #fd7b12;
  --color2: white;
  --color3: #22231f;
  --color4: #fcbf49;
}

/* -- TYPO -- */

p {
  font-family: "Oswald", sans-serif;
}

h2 {
  font-size: 2rem;
}

.team h3 {
  font-size: 1.25rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

h3 {
  font-size: 1rem;
  letter-spacing: 0.1em;
}
h4 {
  font-size: 0.75rem;
  letter-spacing: 0.1em;
}

/* -- BTN/LINK -- */

.login--btn,
.admin--btn,
.close--btn {
  position: absolute;
  top: 0;
  right: 0;
  padding: 1em;
  background-color: var(--color3);
  background: transparent;
}

.login--btn svg {
  height: 30px;
  width: 30px;
}

.login--form button {
  padding: 1em 3em;
  background-color: orange;
  border-radius: 5px;
}

.close--btn {
  background-color: transparent;
  font-size: 2rem;
}

.admin--btn {
  text-align: right;
  margin: 0.25em;
  border-radius: 5px;
  z-index: 2;
}

.admin--btn button {
  background-color: transparent;
}

/* -- LAYOUT -- */

body {
  background-color: var(--color2);
}

.hero {
  overflow: hidden;
  display: flex;
  flex-direction: column;
}

.video--container {
  height: 650px;
  overflow: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
  background: url("stream_bg.png") var(--color3);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

/* .hero--video {
   -webkit-filter: grayscale(100%);
  -moz-filter: grayscale(100%);
  -ms-filter: grayscale(100%);
  -o-filter: grayscale(100%);
  filter: grayscale(100%); 
} */

.sidebar {
  display: grid;
  grid-template-columns: 1fr 2fr;
  color: whitesmoke;
  gap: 1em;
}

.sidebar > section {
  border-radius: 10px;
}

.sidebar a,
.sidebar svg {
  color: whitesmoke;
  cursor: pointer;
}

.ticker,
.player--streams {
  text-align: left;
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  padding: 2em;
  justify-content: baseline;
  background-color: var(--color3);
}

.ticker h3,
.player--streams h3 {
  color: grey;
}

.stream--link {
  display: flex;
  justify-content: space-between;
  align-items: center;
  overflow: hidden;
}

.stream--link a {
  flex-basis: 100%;
  display: flex;
  align-items: center;
  gap: 1em;
  padding: 1em;
}

.upcoming--match {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 1em;
  width: 100%;
}

.match--link {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  padding: 1em;
  width: 100%;
}

.match--link * {
  overflow: hidden;
}

.match--stream {
  flex: 1;
}

main {
  padding: 1em;
  font-size: 1.5rem;
}

.login {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 3em;
  background-color: grey;
  border-radius: 10px;
  width: 400px;
  height: 500px;
  margin: auto;
}

.login h2 {
  color: var(--color3);
}

.login form {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 1em;
}

.login form input {
  padding: 1em 2em;
  font-size: 1em;
  border-radius: 5px;
}
input:-webkit-autofill {
  -webkit-box-shadow: 0 0 0px 1000px var(--color2) inset;
}

.pagination--btns {
  display: flex;
  gap: 1em;
  justify-content: center;
  align-items: center;
}

.pagination--btns p {
  color: whitesmoke;
}
.pagination--btns button {
  color: whitesmoke;
  padding: 1em;
  display: flex;
}

.pagination--btns svg {
  height: 25px;
  width: 25px;
}

/* -- ADMIN -- */
h4.admin {
  padding: 1em;
}

.admin--add--stream,
.admin--add--match,
.admin--add--player--to--team {
  display: flex;
  gap: 1em;
  flex-wrap: wrap;
  padding: 1em;
}

.admin--add--stream button,
.admin--add--match button {
  background-color: transparent;
  font-size: 1.5rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

.admin--add--stream input,
.admin--add--match input,
.admin--add--player--to--team input,
.admin--add--player--to--team select {
  border: 1px solid black;
  border-radius: 5px;
  padding: 0.5em;
  font-size: 1rem;
  font-family: "Oswald", sans-serif;
}

.admin--add--stream p,
.admin--add--match p {
  flex-basis: 100%;
}

.admin--btns {
  display: flex;
  flex-direction: column;
  margin-left: auto;
  gap: 1em;
}

.delete--stream--btn,
.cancel--btn,
.confirm--btn,
.edit--btn {
  padding: 1em;
}

.delete--stream--btn svg,
.cancel--btn svg,
.confirm--btn svg,
.edit--btn svg {
  height: 25px;
  width: 25px;
}

.calendar-wrapper {
  z-index: 2;
  position: fixed;
  overflow: hidden;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
}

.react-calendar {
  font-family: "Oswald", sans-serif;
  background-color: whitesmoke;
  height: max-content;
  z-index: 3;
  padding: 1em;
  margin: auto;
  position: absolute;
}

.react-calendar__navigation {
  display: flex;
  justify-content: space-around;
}

/* --TEAM -- */

.player--container {
  display: grid;
  grid-template-columns: 1fr;
  align-items: center;
  padding: 1em;
}

.wc3--team {
  display: flex;
  flex-wrap: wrap;
}

.player--team--img {
  grid-column: 1/-1;
  height: 400px;
  aspect-ratio: 3/4;
  object-fit: cover;
}

.race--icon {
  width: 50px;
  display: inline-block;
  margin-right: 1em;
}

.player--container h2 {
  display: flex;
  align-items: center;
  margin-top: 1em;
}

/* -- STREAM -- */
.stream {
  display: flex;
  justify-content: center;
  align-items: center;
}

/* -- ABOUT -- */
.about img {
  height: 500px;
  border-radius: 5px;
}
/* -- UTILITY -- */

.bg-black {
  background-color: #22231f;
}

.bg-orange {
  background-color: orange;
}

.bg-transparent {
  background-color: transparent;
}

.error {
  color: darkred;
  font-size: 1rem;
}

.transparent {
  color: transparent;
}

.admin {
  background-color: #fd7b12;
  border-radius: 5px;
  color: white;
}

.number {
  font-family: "Oswald", sans-serif;
  font-weight: 800;
  font-size: 1.25rem;
}

.no--link {
  cursor: auto;
}

.pointer {
  cursor: pointer;
}

/* -- MEDIA -- */

@media (width < 1200px) {
  .hero {
    height: auto;
    display: flex;
    flex-direction: column;
  }
  .hero--video {
    overflow: hidden;
    justify-self: center;
    transform: translateX(0px);
    /* -webkit-filter: grayscale(100%);
    -moz-filter: grayscale(100%);
    -ms-filter: grayscale(100%);
    -o-filter: grayscale(100%);
    filter: grayscale(100%); */
  }

  .video--container {
    height: 400px;
  }
  .ticker {
    height: auto;
  }

  .player--streams {
    height: auto;
  }
  .sidebar {
    display: flex;
    flex-direction: column;
  }
}

@media (width < 750px) {
  .video--container {
    height: 300px;
  }
}
@media (width < 550px) {
  .video--container {
    height: 200px;
  }
  .upcoming--match {
    flex-direction: column;
  }
  .admin--btns {
    flex-direction: row;
    margin: auto;
  }
  .admin--add--stream {
    display: flex;
    flex-direction: column;
  }
  .player--streams {
    font-size: 1rem;
  }
}
@media (width < 380px) {
  .video--container {
    height: 100px;
  }
}

